fix z-index relationships of various windows

--- a/clipslide/frontend/static/slides.css
+++ b/clipslide/frontend/static/slides.css
@@ -430,7 +430,7 @@ body {
   border-radius: 12px;
   box-shadow: 0 2px 16px rgba(0, 0, 0, 0.3);
   padding: 1.2em 1.5em;
-  z-index: 4000;
+  z-index: 2000;
   /* width: 33vw; */
   min-width: 300px;
   /* max-width: 75vw; */
@@ -1372,7 +1372,7 @@ body {
   transform: translateX(-100%);
   width: auto;
   max-width: 60vw;
-  z-index: 4000;
+  z-index: 1000;
   transition: transform 0.4s ease;
   pointer-events: auto;
   display: flex;
@@ -1576,7 +1576,7 @@ body {
   color: #eee; /* light text */
   box-shadow: 0 4px 32px rgba(0, 0, 0, 0.7);
   border-radius: 12px;
-  z-index: 10001;
+  z-index: 1000;
   min-width: 200px;
   min-height: 200px;
   width: auto;
